Dark mode now mostly take care of by the renderer. Front end now passes the correct colours and redraws the board when toggled.

--- a/src/index.css
+++ b/src/index.css
@@ -882,247 +882,21 @@ tr.stickyHeader {
     background-color: var(--main-bg-color);
   }
 
-  /* all labels */
-  g#labels text {
-    color: var(--svg-label-color);
-    fill: var(--svg-label-color);
-  }
-
-  /* labels for areas below the board */
-  .aprender-area-label {
-    color: var(--svg-label-color);
-    fill: var(--svg-label-color);
-  }
-
-  /* all gridlines */
-  g#gridlines line:not([class]), g#gridlines rect:not([class]) {
-    stroke: var(--svg-gridline-color);
-  }
-
-  g#gridlines circle:not([class]) {
-    stroke: var(--svg-gridline-color);
-    fill: var(--svg-gridline-color);
-  }
-
   /* gridlines for cobweb boards */
-  /* div._meta_agere g#gridlines path:not([class]), g#gridlines polygon:not([class]) {
-    stroke: var(--svg-gridline-color);
-  } */
-
-  div._meta_agere g#gridlines circle:not([class]) {
+  /* div._meta_agere g#gridlines circle:not([class]) {
     stroke: var(--svg-gridline-color);
     fill: white;
     fill-opacity: 0;
-  }
-
-  /* gridlines for hex-of-hex, hex-slanted, and hex-odd/even boards */
-  symbol#hex-symbol polygon {
-    fill: var(--svg-default-fill);
-    opacity: 0.25;
-    stroke: var(--svg-default-fill);
-  }
-
-  /* gridlines for sowing boards */
-  symbol#pit-symbol circle {
-    stroke: var(--svg-gridline-color);
-  }
-
-  symbol#square-pit-symbol rect, symbol#end-pit-symbol rect {
-    stroke: var(--svg-gridline-color);
-  }
-
-  /* gridlines for ConHex boards */
-  #board > polygon:not([class]) {
-    stroke: var(--svg-gridline-color);
-  }
-  #board > circle:not([class]) {
-    stroke: var(--svg-gridline-color);
-  }
-  #board > circle[fill="white"] {
-    fill: var(--main-bg-color);
-  }
-
-  /* colours of sowing numerals */
-  symbol[id^="_pips_numeral_"] text {
-    color: var(--svg-gridline-color);
-    fill: var(--svg-gridline-color);
-  }
-
-  /* invert light and dark squares in dark mode */
-  :root[color-mode="dark"] symbol#tile-dark > rect {
-    fill: var(--svg-default-fill);
-    fill-opacity: 0;
-  }
-  :root[color-mode="dark"] symbol#tile-light > rect {
-    fill: var(--svg-default-fill);
-    fill-opacity: 0.25;
-  }
-
-  /* default black annotation line with possible arrow */
-  line.aprender-annotation-3dc45b5962885,
-  line.aprender-annotation-7003d53491b27,
-  line.aprender-annotation-289da774b717b,
-  line.aprender-annotation-6a037e3d800d6,
-  marker.aprender-annotation-3dc45b5962885 circle,
-  marker.aprender-annotation-289da774b717b circle,
-  marker.aprender-annotation-7003d53491b27 circle,
-  marker.aprender-annotation-7681581c947d5 circle,
-  marker.aprender-annotation-3dc45b5962885 path,
-  marker.aprender-annotation-7003d53491b27 path,
-  marker.aprender-annotation-289da774b717b path,
-  marker.aprender-annotation-7681581c947d5 path
-  {
-    fill: var(--svg-annotation-color);
-    stroke: var(--svg-annotation-color);
-  }
-
-  /* eject annotations and polylines are a little different because they don't have fill */
-  polyline.aprender-annotation-3dc45b5962885,
-  polyline.aprender-annotation-7003d53491b27,
-  polyline.aprender-annotation-289da774b717b,
-  polyline.aprender-annotation-6a037e3d800d6,
-  path.aprender-annotation-7681581c947d5,
-  line.aprender-annotation-e401e58e62dfb
-  {
-    stroke: var(--svg-annotation-color);
-  }
-
-  /* default black enter/exit annotation */
-  rect.aprender-annotation-98c266befaf0d,
-  rect.aprender-annotation-e401e58e62dfb
-  {
-    stroke: var(--svg-annotation-color);
-  }
-
-  /* spacer glyphs in FNAP, Four, and others */
-  symbol#aprender-glyph-181ce837a7c8f > rect {
-    fill: var(--main-bg-color);
-  }
-
-  /* Fence markers (Fendo) */
-  line.aprender-marker-1d39c998ed2a8 {
-    stroke: var(--svg-gridline-color);
-  }
-
-  /* default button bars (Alfred's Wyke) */
-  symbol.aprender-button-ee2fc998381cb rect {
-    stroke: var(--svg-gridline-color);
-  }
-  symbol.aprender-button-ee2fc998381cb text {
-    fill: var(--svg-gridline-color);
-  }
-
-  /* Alfred's Wyke pieces */
-  symbol._wyke-internal rect {
-    stroke: var(--svg-gridline-color);
-  }
-
-  /* Amazons */
-  symbol#aprender-glyph-69938dc480dca rect {
-    fill: var(--svg-default-fill);
-  }
-
-  /* circle markers/dots */
-  circle.aprender-marker-2feb7d348620a,
-  circle.aprender-marker-62d0c7517c33e,
-  circle.aprender-annotation-62d0c7517c33e
-  {
-    fill: var(--svg-default-fill);
-  }
-
-  /* stacking-tiles tile borders */
-  rect[class^="aprender-tile-"], rect[class*="aprender-tile-"] {
-    stroke: var(--high-contrast-font-color);
-  }
-
-  /* Generatorb orbs */
-  symbol#aprender-glyph-da79a6f4def08 * path,
-  symbol#aprender-glyph-7a79a6f5634bc * path {
-    stroke: var(--svg-default-fill);
-  }
-
-  /* Homeworlds stash bar */
-  g#stash text {
-    fill: var(--svg-gridline-color);
-  }
-
-  g#stash rect {
-    stroke: var(--svg-gridline-color);
-  }
-
-  symbol#aprender-glyph-aa22a95b2368e [data-playerfill=true] {
-    fill: var(--svg-default-fill)
-  }
+  } */
 
   /* Volcano caps */
   symbol#aprender-glyph-389d5741cdfe1 [data-playerstroke=true] {
     stroke: var(--svg-volcano-caps);
   }
 
-  /* Loose text labels in volcano game areas */
-  svg#theBoardSVG > text {
-    fill: var(--svg-label-color);
-  }
-
-  /* Wizard's Garden labels */
-  text.aprender-marker-3935a634ac317,
-  text.aprender-marker-7de714aa4960a,
-  text.aprender-marker-4d768b7f82802,
-  text.aprender-marker-4e0da245977af
-  {
-    fill: var(--svg-label-color);
-  }
-
-  /* Wizard's Garden black piece */
-  symbol#aprender-glyph-a46a8bca86d66 [data-playerfill=true] {
-    fill: var(--svg-volcano-caps);
-  }
-
-  /* Binar row/column totals */
-  div._meta_binar g#gridlines text[class^="aprender-marker"] {
-    fill: var(--svg-label-color);
-  }
-
   /* Mattock: invert blocked cell color */
-  /* div._meta_mattock polygon.aprender-marker-f47325856bcb8  {
+  div._meta_mattock polygon.aprender-marker-f47325856bcb8  {
     fill: var(--svg-default-fill);
-  } */
-
-  /* black shading, 20% opacity (Gess) */
-  polygon.aprender-marker-0ba3d1e994d63 {
-    fill: var(--svg-default-fill);
-  }
-
-  /* Tablero: Dice */
-  symbol#aprender-glyph-4e52996b2e358 circle,
-  symbol#aprender-glyph-2929ffe7da425 circle,
-  symbol#aprender-glyph-8d5038aeab733 circle,
-  symbol#aprender-glyph-15842807f2ed1 circle,
-  symbol#aprender-glyph-1513a42c54b3b circle,
-  symbol#aprender-glyph-ef7d98e9c022d circle,   /* ^dice markers */
-  symbol#aprender-glyph-981c4ac534f6a circle,   /* dice rolled */
-  symbol#aprender-glyph-2a6c4b13aa358 circle,
-  symbol#aprender-glyph-9cfc4b62e6d82 circle,
-  symbol#aprender-glyph-cfcc4bbcf734b circle,
-  symbol#aprender-glyph-925c4c0ac69d6 circle,
-  symbol#aprender-glyph-94ac4c4dbed82 circle
-  {
-    fill: var(--svg-default-fill);
-  }
-  symbol#aprender-glyph-4e52996b2e358 rect,
-  symbol#aprender-glyph-2929ffe7da425 rect,
-  symbol#aprender-glyph-8d5038aeab733 rect,
-  symbol#aprender-glyph-15842807f2ed1 rect,
-  symbol#aprender-glyph-1513a42c54b3b rect,
-  symbol#aprender-glyph-ef7d98e9c022d rect,   /* ^dice markers */
-  symbol#aprender-glyph-981c4ac534f6a rect,   /* dice rolled */
-  symbol#aprender-glyph-2a6c4b13aa358 rect,
-  symbol#aprender-glyph-9cfc4b62e6d82 rect,
-  symbol#aprender-glyph-cfcc4bbcf734b rect,
-  symbol#aprender-glyph-925c4c0ac69d6 rect,
-  symbol#aprender-glyph-94ac4c4dbed82 rect
-  {
-    stroke: var(--svg-default-fill);
   }
 
   /* Alfred's Wyke button bar fill inversion in dark mode */
@@ -1133,25 +907,3 @@ tr.stickyHeader {
     fill: #999999;
   }
 
-  /* Polyomino area icon colours */
-  symbol#_icon-flipy > path,
-  symbol#_icon-flipx > path,
-  symbol#_icon-cw > path,
-  symbol#_icon-ccw > path
-  {
-    stroke: var(--secondary-font-color);
-  }
-  symbol#_icon-cancel > path {
-    stroke: var(--secondary-font-color);
-    fill: var(--secondary-font-color);
-  }
-
-  /* King's Valley towers need to be highlighted */
-  div._meta_valley symbol#aprender-glyph-80f2ff48cd1c0 > path {
-    fill: var(--svg-default-fill);
-  }
-
-  /* Tintas neutral piece */
-  symbol#aprender-glyph-95e38e90d9ff5 > path {
-    fill: var(--svg-default-fill);
-  }
