--- a/src/index.css
+++ b/src/index.css
@@ -943,6 +943,20 @@ tr.stickyHeader {
     -webkit-overflow-scrolling: touch; /* Smooth scrolling on touch devices */
   }
 
+  .sortableList {
+    border: 1px solid var(--main-fg-color);
+    margin-bottom: 1em;
+  }
+
+  .sortableItem {
+    background-color: var(--tag-background-color);
+    margin: 0.5em;
+  }
+
+  .sortableItemDragged {
+    background-color: var(--bg-color2);
+  }
+
   /* Game board customimzation for light/dark mode! */
   /* gridlines for cobweb boards */
   /* div._meta_agere g#gridlines circle:not([class]) {
