Fix dark-mode CSS, disabled table buttons

--- a/src/index.css
+++ b/src/index.css
@@ -102,7 +102,7 @@ textarea {
 }
 
 button:disabled {
-    --bulma-button-disabled-background-color: #fff;
+    --bulma-button-disabled-background-color: var(--main-bg-color);
     --bulma-button-disabled-border-color: #dbdbdb;
     color: var(--main-font-color);
     opacity: 0.5;
