--- a/src/index.css
+++ b/src/index.css
@@ -492,8 +492,8 @@ th .player {
 
 .smallicon {
   padding-left: 0.2rem;
-  vertical-align: 0.6em;
   font-size: 8px;
+  vertical-align: 0.4em;
 }
 
 .winnerButtonImage {
@@ -516,6 +516,20 @@ th .player {
   transform: translateY(-15%);
   height: 1rem;
   width: 1rem;
+}
+
+.premoveIcon {
+  font-size: 1rem;
+  margin-left: 0.7rem;
+  transform: translateY(-15%);
+  height: 1rem;
+  width: 1rem;
+}
+
+.premoveIndicator {
+  padding-left: 0.1rem;
+  vertical-align: 0.35em;
+  font-size: 8px;
 }
 
 .winningColorButton {
